# crawl-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
src/http/: client.rs  mod.rs
src/providers/: crawl.rs  file.rs  http.rs  mod.rs
tests/: client_test.rs  providers_test.rs
tests/input/: valid_json.json
